--- a/award/select/styles.css
+++ b/award/select/styles.css
@@ -9,6 +9,26 @@
         transform: translateY(-40px);
     }
 }
+@keyframes spread {
+    0% {
+        transform: scale(1.4);
+        opacity: 1;
+    }
+  
+    40% {
+        transform: scale(1.6);
+        opacity: 0.8;
+    }
+ 
+    60% {
+        transform: scale(1.8);
+        opacity: 0.4;
+    }
+    100% {
+        transform: scale(2);
+        opacity: 0.0; /* Reduce opacity to give a fading effect */
+    }
+}
 
 body {
     width: 80vw;
@@ -16,7 +36,7 @@ body {
     margin: auto;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/assets/images/background-1.jpg");
+    background-image: url("/assets/images/background-2.jpg");
     background-size: cover; /* Ensures the image covers the entire area */
     background-position: center; /* Centers the image within the body */
     background-repeat: no-repeat; /* Prevents the image from repeating */
@@ -53,7 +73,7 @@ body {
 
 .title {
     font-size: 96px;
-    color: #000;
+    color: #c03c07;
     margin-bottom: 40px;
     margin-left: 200px;
 }
@@ -80,9 +100,18 @@ body {
 
 
 .gift:hover {
-    transform: scale(1.6);
+    transform: scale(1.4);
 }
 
 .active {
-    animation: bounce 0.2s ease;
+    animation: bounce 0.6s ease , spread 3s ease-out;
+}
+
+
+/* Disable pointer events and opacity when gifts are disabled */
+.disabled {
+    cursor: wait;
+    pointer-events: none; /* Disable clicks */
+    opacity: 0.6; /* Visually indicate disabled state */
+    transition: opacity 0.5s ease; /* Smooth transition for re-enabling */
 }
