--- a/penalty/styles.css
+++ b/penalty/styles.css
@@ -69,6 +69,7 @@ body {
     position: absolute;
     border-radius: 100px;
     min-height: 300px;
+    min-width: 700px;
     max-width: 700px;
     padding: 48px;
     background-color: #f8b26a;
