--- a/award/result/styles.css
+++ b/award/result/styles.css
@@ -11,20 +11,32 @@
 }
 
 body {
-    width: 80vw;
-    height: 80vh;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/assets/images/background-1.jpg");
-    background-size: cover; /* Ensures the image covers the entire area */
-    background-position: center; /* Centers the image within the body */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-color: #f0f0f0;
 }
 
 .container {
-    text-align: center;
-    padding: 20px;
+    width: 90%;
+        max-width: 1000px;
+        height: 80%;
+        max-height: 600px;
+        background-image: url("/assets/images/background-2.jpg");
+        background-size: cover; /* Ensures the image covers the entire area */
+        background-position: center; /* Centers the image within the body */
+        background-repeat: no-repeat; /* Prevents the image from repeating */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        position: relative;
+
 }
 
 .header {
@@ -33,10 +45,14 @@ body {
     align-items: center;
 }
 
-.logo {
-    width: 240px;
-    height: 240px;
-    margin-right: 10px;
+#img_team {
+    position:absolute;
+    width: 150px;
+    height:90px;
+    top: 0px;
+    left: -25px;
+    object-fit: contain;
+    cursor: pointer;
 }
 
 .header-text h2 {
@@ -57,19 +73,12 @@ body {
     margin-bottom: 40px;
     margin-left: 200px;
 }
-
-
-
-
-
 .reward-box {
     margin: auto;
     background-color: #f8b26a;
     border-radius: 100px;
     padding: 48px;
-    margin-bottom: 40px;
-    width: 60%;
-    min-height: 300px;
+    min-height: 200px;
     text-align: center;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
 }
