--- a/award/select/styles.css
+++ b/award/select/styles.css
@@ -31,20 +31,32 @@
 }
 
 body {
-    width: 80vw;
-    height: 80vh;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/assets/images/background-2.jpg");
-    background-size: cover; /* Ensures the image covers the entire area */
-    background-position: center; /* Centers the image within the body */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-color: #f0f0f0;
 }
 
 .container {
-    text-align: center;
-    padding: 20px;
+    width: 90%;
+        max-width: 1000px;
+        height: 80%;
+        max-height: 600px;
+        background-image: url("/assets/images/background-2.jpg");
+        background-size: cover; /* Ensures the image covers the entire area */
+        background-position: center; /* Centers the image within the body */
+        background-repeat: no-repeat; /* Prevents the image from repeating */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        position: relative;
+
 }
 
 .header {
@@ -53,12 +65,16 @@ body {
     align-items: center;
 }
 
-.logo {
-    width: 240px;
-    height: 240px;
-    margin-right: 10px;
-}
+#img_team {
+    position:absolute;
+    width: 150px;
+    height:90px;
+    top: 0px;
+    left: -25px;
+    object-fit: contain;
+    cursor: pointer;
 
+}
 .header-text h2 {
     margin: 0;
     font-size: 24px;
@@ -72,7 +88,7 @@ body {
 }
 
 .title {
-    font-size: 96px;
+    font-size: 40px;
     color: #c03c07;
     margin-bottom: 40px;
     margin-left: 200px;
@@ -92,8 +108,8 @@ body {
 }
 
 .gift {
-    width: 200px;
-    height: 200px;
+    width: 120px;
+    height: 120px;
     transition: transform 0.6s ease;
     cursor: pointer;
 }
