--- a/penalty/styles.css
+++ b/penalty/styles.css
@@ -1,18 +1,30 @@
 body {
-    width: 80vw;
-    height: 80vh;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url("/assets/images/background-1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: #f0f0f0;
 }
 
 .container {
-    text-align: center;
-    padding: 20px;
+    width: 90%;
+        max-width: 1000px;
+        height: 80%;
+        max-height: 600px;
+        background-image: url("/assets/images/background-2.jpg");
+        background-size: cover; /* Ensures the image covers the entire area */
+        background-position: center; /* Centers the image within the body */
+        background-repeat: no-repeat; /* Prevents the image from repeating */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        position: relative;
+
 }
 
 .header {
@@ -21,10 +33,14 @@ body {
     align-items: center;
 }
 
-.logo {
-    width: 240px;
-    height: 240px;
-    margin-right: 10px;
+#img_team {
+    position:absolute;
+    width: 150px;
+    height:90px;
+    top: 0px;
+    left: -25px;
+    object-fit: contain;
+    cursor: pointer;
 }
 
 .title {
@@ -66,20 +82,15 @@ body {
 }
 
 .message-panel {
-    position: absolute;
-    border-radius: 100px;
-    min-height: 300px;
-    min-width: 700px;
-    max-width: 700px;
-    padding: 48px;
+    margin: auto;
     background-color: #f8b26a;
-    left: 31%;
-
-    top: 30%; 
-    opacity: 0; 
+    border-radius: 100px;
+    padding: 48px;
+    min-height: 200px;
+    text-align: center;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
    
 }
-
 .message-panel.show {
     transform: translateX(-50%);
     transition: opacity 0.5s ease, transform 0.5s ease; 
@@ -93,14 +104,7 @@ body {
     color: white; /* Red color for emphasis */
     margin-top: 20px;
 }
-
-
-
-
-
 .next-button {
-    position: absolute;
-    bottom: 200px;
     width: 100px;
     height: 100px;
     background-image: url('/assets/images/right-arrow.png');
@@ -114,9 +118,10 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     animation: bounce 2s infinite;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-    opacity: 0;
 }
-
+.next-button-hide {
+    visibility: hidden;
+}
 .next-button:hover {
     background-color: #f0611e;
 }
@@ -127,13 +132,10 @@ body {
         transform: translateY(0);
     }
     40% {
-        transform: translateX(-10px);
+        transform: translateY(-80px);
     }
     60% {
-        transform: translateX(-20px);
-    }
-    80% {
-        transform: translateX(-30px);
+        transform: translateY(-40px);
     }
 }
 
