--- a/award/result/styles.css
+++ b/award/result/styles.css
@@ -19,12 +19,15 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+    background-image: url('https://static.vecteezy.com/system/resources/previews/009/877/673/non_2x/pixel-art-sky-background-with-clouds-cloudy-blue-sky-for-8bit-game-on-white-background-vector.jpg'); /* Replace with your background image */
+    background-size: cover;
+    background-position: center;
 }
 
 .container {
     width: 90%;
-        max-width: 1000px;
-        height: 80%;
+    max-width: 1200px;
+    height: 90%;
         max-height: 600px;
         background-image: url("/assets/images/background-2.jpg");
         background-size: cover; /* Ensures the image covers the entire area */
