--- a/award/result/styles.css
+++ b/award/result/styles.css
@@ -17,7 +17,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Inter';
     background-color: #f0f0f0;
     background-image: url('https://static.vecteezy.com/system/resources/previews/009/877/673/non_2x/pixel-art-sky-background-with-clouds-cloudy-blue-sky-for-8bit-game-on-white-background-vector.jpg'); /* Replace with your background image */
     background-size: cover;
@@ -78,7 +78,7 @@ body {
 }
 .reward-box {
     margin: auto;
-    background-color: #f8b26a;
+    background-color: #F2B873;
     border-radius: 100px;
     padding: 48px;
     min-height: 200px;
@@ -89,8 +89,9 @@ body {
 }
 
 .reward-box p {
-    font-size: 32px;
-    color: white;
+    font-family: 'Inter';
+    font-size: 48px;
+    color: #ffffff;
 }
 
 
