update fix lỗi giao diện luật chơi

--- a/rule/styles.css
+++ b/rule/styles.css
@@ -67,7 +67,7 @@ body {
 
 .rule-box li {
     font-size: 16px;
-    color:#FFFFFF;
+    color:#000000;
     text-align: start;
     line-height:30px;
     font-family: 'Inter';
